Many pages added

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -54,3 +54,6 @@
 @import "components/footer";
 @import "components/abouts";
 @import "components/home";
+@import "components/ministries";
+@import "components/events";
+@import "components/welcome";
