--- a/src/assets/scss/components/_abouts.sass
+++ b/src/assets/scss/components/_abouts.sass
@@ -9,6 +9,7 @@
     img.featured_image 
         border: 10px solid $dark-gray
         width: 100%
+        max-width: 850px
         margin-left: auto
         margin-right: auto
         text-align: center
