--- a/src/assets/scss/components/_home.sass
+++ b/src/assets/scss/components/_home.sass
@@ -15,6 +15,7 @@
             flex-direction: row
         img
             max-width: 595px
+            width: 100%
             max-height: 305px
             border: 1px solid $coffee
             margin-left: auto
@@ -58,6 +59,9 @@
                 justify-content: flex-end
                 background-size: cover
                 box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50)
+                margin-bottom: 30px
+                @include breakpoint (950px)
+                    margin-bottom: 0
                 .sermon-text
                     background: rgba(0,0,0,0.70)
                     width: 100%
@@ -85,9 +89,12 @@
     padding-bottom: 40px
     .home-events, .home-articles
         max-width: 420px
+        margin-left: auto
+        margin-right: auto
         flex-grow: 1
         background: $dark-gray
         box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50)
+        margin-bottom: 30px
         h3
             background: $coffee
             text-align: center
@@ -109,6 +116,8 @@
             color: $coffee
         p
             color: darken($coffee, 15%)
+    .home-events
+        margin-bottom: 30px
 
 
 
