Added a bunch of stuff

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -57,3 +57,10 @@
 @import "components/ministries";
 @import "components/events";
 @import "components/welcome";
+@import "components/event";
+@import "components/sermons";
+@import "components/sermon-list";
+@import "components/sermon";
+@import "components/blog-single";
+@import "components/blog-list";
+@import "components/gallery";
