--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -6,30 +6,30 @@
 
     </ul><!--/utility-1-->
     <ul class="nav-1 dropdown" data-dropdown-menu>
-        <li><a href="#">Welcome</a></li>
+        <li><a href="{{root}}welcome.html">Welcome</a></li>
         <li><a href="#">About Us</a>
             <ul class="menu">
-                <li><a href="#">Item</a></li>
+                <li><a href="{{root}}about.html">Item</a></li>
             </ul>
         </li>
         <li><a href="#">Ministries</a>
             <ul class="menu">
-                <li><a href="#">Item</a></li>
+                <li><a href="{{root}}ministries.html">Item</a></li>
             </ul>
         </li>
     </ul>
 </div><!--nav-1-->
-<h1 class="logo"><a href="#">Hartwell <span>Baptist Church</span></a></h1>
+<h1 class="logo"><a href="{{root}}/">Hartwell <span>Baptist Church</span></a></h1>
 <div class="nav-2">
     <ul class="utility-2">
         <li><a href="info.html .service-times" data-featherlight="ajax"><i class="fa fa-clock-o"></i> Service Schedule</a></li>
         <li><a href="info.html .contact" data-featherlight="ajax"><i class="fa fa-phone-square"></i> Contact Info</a></li>
     </ul><!--/utility-2-->
     <ul class="nav-2 dropdown" data-dropdown-menu>
-        <li><a href="#">Events</a></li>
+        <li><a href="{{root}}calendar.html">Events</a></li>
         <li><a href="#">Media</a>
         <ul class="menu">
-            <li><a href="#">Sermons</a></li>
+            <li><a href="{{root}}sermons.html">Sermons</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Gallery</a></li>
         </ul>
@@ -47,19 +47,19 @@
 </nav>
 <div class="off-canvas position-right mobile-sidebar" id="offCanvas" data-off-canvas data-position="right">
     <ul class="vertical side-menu menu" data-accordion-menu>
-    <li><a href="#">HOME</a></li>
-    <li><a href="#">WELCOME</a></li>
+    <li><a href="{{root}}/">HOME</a></li>
+    <li><a href="{{root}}welcome.html">Welcome</a></li>
     <li><a href="#">ABOUT US</a>
         <ul class="menu">
-            <li><a href="#">Item</a></li>
+            <li><a href="{{root}}about.html">Item</a></li>
         </ul>
     </li><!--/End of About Us-->
     <li><a href="#">MINISTRIES</a>
         <ul class="menu">
-            <li><a href="#">Item</a></li>
+            <li><a href="{{root}}ministries.html">Item</a></li>
                 </ul>
     </li><!--/ministries-->
-    <li><a href="#">CALENDAR</a></li>
+    <li><a href="{{root}}calendar.html">CALENDAR</a></li>
     <li><a href="#">MEDIA</a>
         <ul class="menu">
             <li><a href="#">Sermons</a></li>
