--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -57,8 +57,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #2199e8,
-  secondary: #777,
+  primary: #314040,
+  secondary: #6E6947,
   success: #3adb76,
   warning: #ffae00,
   alert: #ec5840,
