--- a/src/assets/scss/components/_home.sass
+++ b/src/assets/scss/components/_home.sass
@@ -50,6 +50,7 @@
             display: flex
             justify-content: space-around
             flex-wrap: wrap
+            background: transparent 
             .sermon
                 width: 270px
                 height: 152px
@@ -108,10 +109,13 @@
             width: 90px
             height: 51px
             margin-right: 15px
+            flex-shrink: 0
     .event-info, .article-info
+        max-width: 280px 
         h4
             margin-bottom: 0
             margin-top: -5px
+            font-size: 1.3em
         h4 a
             color: $coffee
         p
