--- a/src/assets/scss/components/_welcome.sass
+++ b/src/assets/scss/components/_welcome.sass
@@ -7,7 +7,7 @@
     .welcome-hero
         width: 100%
         max-width: 1200px
-        background: url(../img/cinci3.jpg) center center
+        background: url('http://sitesforchurch.s3.amazonaws.com/cinci3.jpg') center center
         margin-top: -30px
         height: 400px
         background-size: cover
